# Agentic_markdown_rag_ingestion_pipeline

./: .Janes_chunks.json.swp  .claude_ingest.py.swp  .main.py.swp  Janes_chunks.json  README.md  agentic_rag.py  check_qdrant.py  chunks.json  claude_ingest.py  config.py  config.yaml  convert_pdf.py  ingest_docs.py  ingest_docs_hierarchical.py  ingest_semantic.py  lessons.py  main.py  new_langgraph_requirements.txt  pyproject.toml  qdrant_store.py  requirements.txt  test.py  ui.py
docs/: normalized.md
markdown/: 133-Annual2008.md  Janes 2023-2024 China.md
