[project]
name = "langgraph-rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11.11"
dependencies = [
    "faiss-cpu>=1.13.2",
    "fastapi>=0.135.1",
    "gradio>=6.9.0",
    "ipykernel>=7.2.0",
    "ipython>=9.10.0",
    "langchain>=1.2.12",
    "langchain-community>=0.4.1",
    "langchain-core>=1.2.19",
    "langchain-docling>=2.0.0",
    "langchain-google-genai>=4.2.1",
    "langchain-groq>=1.1.2",
    "langchain-milvus>=0.3.3",
    "langchain-ollama>=1.0.1",
    "langchain-openai>=1.1.11",
    "langgraph>=1.1.2",
    "langserve>=0.3.3",
    "marker-pdf[full]>=1.6.1",
    "pydantic>=2.12.5",
    "pymilvus>=2.6.10",
    "pymupdf>=1.27.2",
    "pymupdf4llm>=1.27.2.1",
    "python-dotenv>=1.2.2",
    "pyyaml>=6.0.3",
    "sse-starlette>=3.3.2",
    "streamlit>=1.55.0",
    "uvicorn>=0.41.0",
]
